<resources>
    <string name="app_name">Movies</string>
    <string name="api_key">put your Api_Key</string>
    <string name="YOUTUBE_BASE_IMAGE_URL">http://img.youtube.com/vi/</string>
    <string name="YOUTUBE_IMAGE_EXTENSION">/mqdefault.jpg</string>
    <string name="YOUTUBE_BASE_VIDEO_URL">https://youtube.com/watch?v=</string>

    <string name="todo">TODO</string>
    <string name="movie_title">Movie Title</string>
    <string name="backdrop_image">backDrop Image</string>
    <string name="ar">AR</string>
    <string name="movie_rating">movie rating</string>
    <string name="release_date">Release Date</string>
    <string name="movie_overview">Movie Overview</string>
    <string name="movie_rate">Movie Rate</string>
    <string name="language">Language</string>
    <string name="trailerimage">trailerImage</string>
    <string name="videos">Videos</string>
    <string name="trailers">Trailers</string>
    <string name="star">Star</string>
    <string name="_5">5</string>
    <string name="play_icon">play icon</string>
    <string name="movie_transition" translatable="false">movie_transition</string>
    <string name="review_transition" translatable="false">review_transition</string>
    <string name="author_name">Author Name</string>
    <string name="review_content">Review Content</string>
    <string name="reviews">Reviews</string>
    <string name="view_more">View More</string>
    <string name="view_more_icon">View More Icon</string>

</resources>
