<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movieReview"
            type="com.maboe.movies.model.MovieReview" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/reviewCardView"
        android:layout_width="@dimen/review_item_width"
        android:layout_height="wrap_content"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/authorTv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/review_author_height"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:singleLine="true"
                android:text="@{movieReview.author}"
                android:textColor="@color/detailTextColor"
                android:textSize="@dimen/review_author_text_size"
                android:transitionName="@string/review_transition"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/contentTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/authorTv"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:ellipsize="end"
                android:maxLines="10"
                android:minHeight="@dimen/review_content_height"
                android:text="@{movieReview.content}"
                android:textColor="@color/detailTextColor"
                android:textSize="@dimen/review_content_text_size"
                tools:text="There is movie review" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/contentTv"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@color/dividerColor" />

            <TextView
                android:id="@+id/viewMoreTv"
                android:layout_width="0dp"
                android:layout_height="@dimen/review_view_more_height"
                android:layout_below="@id/divider"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_toStartOf="@id/expandIv"
                android:gravity="center_vertical"
                android:text="@string/view_more"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/viewMoreColor" />

            <ImageView
                android:id="@+id/expandIv"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:layout_below="@id/divider"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/view_more_icon"
                android:padding="@dimen/image_padding"
                app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</layout>