<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="secondaryMovie"
            type="com.maboe.movies.model.Movie" />
    </data>

    <LinearLayout
        android:id="@+id/ad"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.maboe.movies.view.MovieActivity">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent"
            tools:showIn="@layout/activity_movie">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp">

                    <ImageView
                        android:id="@+id/movie_backdrop_detail"
                        android:layout_width="180dp"
                        android:layout_height="250dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="2dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/backdrop_image"
                        android:cropToPadding="true"
                        android:paddingTop="4dp"
                        android:scaleType="fitXY"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/rate_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        bind:posterPath="@{secondaryMovie.posterPath}"
                        tools:ignore="UnusedAttribute"
                        tools:srcCompat="@tools:sample/backgrounds/scenic" />

                    <TextView
                        android:id="@+id/movie_title_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:paddingTop="4dp"
                        android:text="@{secondaryMovie.title}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/detailTextColor"
                        app:layout_constraintBottom_toTopOf="@+id/rate_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/movie_backdrop_detail"
                        app:layout_constraintTop_toBottomOf="@+id/title_text"
                        tools:layout_constraintLeft_creator="1"
                        tools:layout_constraintTop_creator="1" />

                    <TextView
                        android:id="@+id/movie_release_date_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="8dp"
                        android:padding="4dp"
                        android:text="@{secondaryMovie.releaseDate}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/detailTextColor"
                        app:layout_constraintBottom_toTopOf="@+id/movie_language_detail"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/movie_backdrop_detail"
                        app:layout_constraintTop_toBottomOf="@+id/movie_rating_detail" />


                    <TextView
                        android:id="@+id/movie_rating_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="1dp"
                        android:layout_marginBottom="4dp"
                        android:paddingTop="4dp"
                        android:text="@{Double.toString(secondaryMovie.voteAverage)}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/detailTextColor"
                        app:layout_constraintBottom_toTopOf="@+id/movie_release_date_detail"
                        app:layout_constraintEnd_toStartOf="@+id/imageView"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/movie_backdrop_detail"
                        app:layout_constraintTop_toBottomOf="@+id/movie_title_detail"
                        tools:layout_constraintTop_creator="1" />

                    <TextView
                        android:id="@+id/movie_language_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@{secondaryMovie.originalLanguage}"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/detailTextColor"
                        app:layout_constraintBottom_toTopOf="@+id/overview_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.51"
                        app:layout_constraintStart_toEndOf="@+id/movie_backdrop_detail"
                        app:layout_constraintTop_toBottomOf="@+id/movie_release_date_detail" />

                    <TextView
                        android:id="@+id/movie_overview_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="8dp"
                        android:padding="4dp"
                        android:text="@{secondaryMovie.overview}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/overview_text"
                        app:layout_constraintVertical_bias="1.0" />

                    <TextView
                        android:id="@+id/title_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/movie_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintBottom_toTopOf="@+id/movie_title_detail"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/movie_backdrop_detail"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/rate_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/movie_rate"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintBottom_toTopOf="@+id/movie_rating_detail"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/movie_backdrop_detail"
                        app:layout_constraintTop_toBottomOf="@+id/movie_title_detail" />

                    <TextView
                        android:id="@+id/date_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/release_date"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintBottom_toTopOf="@+id/movie_release_date_detail"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/movie_backdrop_detail"
                        app:layout_constraintTop_toBottomOf="@+id/movie_rating_detail" />

                    <TextView
                        android:id="@+id/language_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/language"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintBottom_toTopOf="@+id/movie_language_detail"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/movie_backdrop_detail"
                        app:layout_constraintTop_toBottomOf="@+id/movie_release_date_detail" />

                    <TextView
                        android:id="@+id/overview_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/movie_overview"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/movie_backdrop_detail" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:contentDescription="@string/star"
                        app:layout_constraintBottom_toTopOf="@+id/date_text"
                        app:layout_constraintStart_toEndOf="@+id/movie_rating_detail"
                        app:layout_constraintTop_toBottomOf="@+id/rate_text"
                        app:layout_constraintVertical_bias="0.2"
                        app:srcCompat="@drawable/star" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <include
                    android:id="@+id/movie_videos"
                    layout="@layout/detail_trailer" />

                <include
                    android:id="@+id/movie_review"
                    layout="@layout/detail_review" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</layout>